<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="48dp"
        android:paddingHorizontal="16dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="16sp"
                android:textColor="@color/secondaryTextColor"
                android:layout_marginBottom="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/jessica" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/user_profile"
                android:scaleType="fitCenter"
                android:src="@drawable/user"
                app:shapeAppearanceOverlay="@style/CircularImage" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/top_10_safest_sunscreen"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/secondaryTextColor"
            android:text="@string/see_all"/>
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_beauty_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"

        />


</LinearLayout>