<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileScreen">


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/arrow"
        android:elevation="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toTopOf="@id/user_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/user_profile"
        android:scaleType="fitCenter"
        android:src="@drawable/user"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toTopOf="@id/nameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/CircularImage"
        tools:layout_editor_absoluteX="105dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/daniel"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_image" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>