<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_background_color">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="448dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/arrow"
            android:elevation="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="452dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/arrow"
            android:elevation="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/share"
            app:layout_constraintBottom_toTopOf="@+id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginBottom="-32dp"
            android:contentDescription="@string/item_photo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_button"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="16dp"
            app:cardCornerRadius="20dp"
            app:contentPadding="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item_photo"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv_item_price"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:text="@string/price"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_item_name" />

                <LinearLayout
                    android:id="@+id/row_middle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_item_name">

                    <TextView
                        android:id="@+id/tv_item_description_short"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_item_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text=" | Reviews"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_item_alternatives"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text=" | Alternatives"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_item_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/description"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/row_middle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
